WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314827
The WebProcess message SwitchFromStaticFontRegistryToUserFontRegistry is not required on recent macOS versions
https://bugs.webkit.org/show_bug.cgi?id=314827
Summary
The WebProcess message SwitchFromStaticFontRegistryToUserFontRegistry is not ...
Per Arne Vollan
Reported
2026-05-14 10:19:25 PDT
The WebProcess message SwitchFromStaticFontRegistryToUserFontRegistry is not required on recent macOS versions.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-14 10:19:33 PDT
<
rdar://problem/177083656
>
Per Arne Vollan
Comment 2
2026-05-14 10:23:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64938
EWS
Comment 3
2026-05-15 11:05:19 PDT
Committed
313315@main
(1bde266ec80f): <
https://commits.webkit.org/313315@main
> Reviewed commits have been landed. Closing PR #64938 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug