Source/WebKit/WebProcess/WebProcess.h
@@ -460,8 +460,9 @@ public:
 
     void grantAccessToAssetServices(Vector<WebKit::SandboxExtensionHandle>&& assetServicesHandles);
     void revokeAccessToAssetServices();
+#if !ENABLE(REMOVE_XPC_AND_MACH_SANDBOX_EXTENSIONS_IN_WEBCONTENT)
     void switchFromStaticFontRegistryToUserFontRegistry(Vector<SandboxExtension::Handle>&& fontMachExtensionHandles);
-
+#endif
     void disableURLSchemeCheckInDataDetectors() const;
 
 #if PLATFORM(MAC)
